@@ -17,7 +17,6 @@
 package org.apache.jackrabbit.oak.plugins.index.lucene;
 
 import static org.apache.jackrabbit.guava.common.collect.ImmutableList.copyOf;
-import static org.apache.jackrabbit.guava.common.collect.ImmutableSet.of;
 import static org.apache.jackrabbit.guava.common.collect.Iterators.transform;
 import static org.apache.jackrabbit.guava.common.collect.Lists.newArrayList;
 import static org.apache.jackrabbit.guava.common.util.concurrent.MoreExecutors.newDirectExecutorService;
@@ -119,7 +118,6 @@ import org.junit.Assert;
 import org.junit.Test;
 
 import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.guava.common.collect.Lists;
 
 @SuppressWarnings("ConstantConditions")
@@ -140,7 +138,7 @@ public class LuceneIndexTest {
     @Test
     public void testLuceneV1NonExistentProperty() throws Exception {
         NodeBuilder index = builder.child(INDEX_DEFINITIONS_NAME);
-        NodeBuilder defn = newLuceneIndexDefinition(index, "lucene", ImmutableSet.of("String"));
+        NodeBuilder defn = newLuceneIndexDefinition(index, "lucene", Set.of("String"));
         defn.setProperty(FulltextIndexConstants.COMPAT_MODE, IndexFormatVersion.V1.getVersion());
 
         NodeState before = builder.getNodeState();
@@ -175,7 +173,7 @@ public class LuceneIndexTest {
     @Test
     public void testLucene() throws Exception {
         NodeBuilder index = builder.child(INDEX_DEFINITIONS_NAME);
-        newLucenePropertyIndexDefinition(index, "lucene", ImmutableSet.of("foo"), null);
+        newLucenePropertyIndexDefinition(index, "lucene", Set.of("foo"), null);
 
         NodeState before = builder.getNodeState();
         builder.setProperty("foo", "bar");
@@ -200,7 +198,7 @@ public class LuceneIndexTest {
     @Test
     public void testLuceneLazyCursor() throws Exception {
         NodeBuilder index = builder.child(INDEX_DEFINITIONS_NAME);
-        newLucenePropertyIndexDefinition(index, "lucene", ImmutableSet.of("foo"), null);
+        newLucenePropertyIndexDefinition(index, "lucene", Set.of("foo"), null);
 
         NodeState before = builder.getNodeState();
         builder.setProperty("foo", "bar");
@@ -230,7 +228,7 @@ public class LuceneIndexTest {
     @Test
     public void testLucene2() throws Exception {
         NodeBuilder index = builder.child(INDEX_DEFINITIONS_NAME);
-        newLucenePropertyIndexDefinition(index, "lucene", ImmutableSet.of("foo"), null);
+        newLucenePropertyIndexDefinition(index, "lucene", Set.of("foo"), null);
 
         NodeState before = builder.getNodeState();
         builder.setProperty("foo", "bar");
@@ -264,7 +262,7 @@ public class LuceneIndexTest {
     @Test
     public void testLucene3() throws Exception {
         NodeBuilder index = newLucenePropertyIndexDefinition(builder.child(INDEX_DEFINITIONS_NAME),
-            "lucene", ImmutableSet.of("foo"), null);
+            "lucene", Set.of("foo"), null);
         NodeBuilder rules = index.child(INDEX_RULES);
         NodeBuilder fooProp = rules.child("nt:base").child(FulltextIndexConstants.PROP_NODE).child("foo");
         fooProp.setProperty(FulltextIndexConstants.PROP_PROPERTY_INDEX, true);
@@ -300,7 +298,7 @@ public class LuceneIndexTest {
     @Test
     public void testCursorStability() throws Exception {
         NodeBuilder index = newLucenePropertyIndexDefinition(builder.child(INDEX_DEFINITIONS_NAME),
-            "lucene", ImmutableSet.of("foo"), null);
+            "lucene", Set.of("foo"), null);
         NodeBuilder rules = index.child(INDEX_RULES);
         NodeBuilder fooProp = rules.child("nt:base").child(FulltextIndexConstants.PROP_NODE).child("foo");
         fooProp.setProperty(FulltextIndexConstants.PROP_PROPERTY_INDEX, true);
@@ -381,7 +379,7 @@ public class LuceneIndexTest {
         root = TestUtil.registerTestNodeType(builder).getNodeState();
 
         NodeBuilder index = newLucenePropertyIndexDefinition(builder.child(INDEX_DEFINITIONS_NAME),
-            "lucene", ImmutableSet.of("foo"), null);
+            "lucene", Set.of("foo"), null);
         NodeBuilder rules = index.child(INDEX_RULES);
         NodeBuilder propNode = rules.child(NT_TEST).child(FulltextIndexConstants.PROP_NODE);
 
@@ -412,7 +410,7 @@ public class LuceneIndexTest {
         root = TestUtil.registerTestNodeType(builder).getNodeState();
 
         NodeBuilder index = newLucenePropertyIndexDefinition(builder.child(INDEX_DEFINITIONS_NAME),
-            "lucene", ImmutableSet.of("foo"), null);
+            "lucene", Set.of("foo"), null);
         NodeBuilder rules = index.child(INDEX_RULES);
         NodeBuilder propNode = rules.child(NT_TEST).child(FulltextIndexConstants.PROP_NODE);
 
@@ -444,7 +442,7 @@ public class LuceneIndexTest {
         root = TestUtil.registerTestNodeType(builder).getNodeState();
 
         NodeBuilder index = newLucenePropertyIndexDefinition(builder.child(INDEX_DEFINITIONS_NAME),
-            "lucene", ImmutableSet.of("foo"), null);
+            "lucene", Set.of("foo"), null);
         NodeBuilder rules = index.child(INDEX_RULES);
         NodeBuilder propNode = rules.child(NT_TEST).child(FulltextIndexConstants.PROP_NODE);
 
@@ -486,7 +484,7 @@ public class LuceneIndexTest {
     @Test
     public void testPathRestrictions() throws Exception {
         NodeBuilder idx = newLucenePropertyIndexDefinition(builder.child(INDEX_DEFINITIONS_NAME),
-            "lucene", ImmutableSet.of("foo"), null);
+            "lucene", Set.of("foo"), null);
         idx.setProperty(FulltextIndexConstants.EVALUATE_PATH_RESTRICTION, true);
 
         NodeState before = builder.getNodeState();
@@ -524,7 +522,7 @@ public class LuceneIndexTest {
     @Test
     public void nodeNameIndex() throws Exception{
         NodeBuilder index = newLucenePropertyIndexDefinition(builder.child(INDEX_DEFINITIONS_NAME),
-            "lucene", ImmutableSet.of("foo"), null);
+            "lucene", Set.of("foo"), null);
         NodeBuilder rules = index.child(INDEX_RULES);
         NodeBuilder ruleNode = rules.child(NT_FILE);
         ruleNode.setProperty(FulltextIndexConstants.INDEX_NODE_NAME, true);
@@ -562,7 +560,7 @@ public class LuceneIndexTest {
     @Test
     public void analyzerWithStopWords() throws Exception{
         NodeBuilder nb = newLuceneIndexDefinition(builder.child(INDEX_DEFINITIONS_NAME), "lucene",
-            of(TYPENAME_STRING));
+            Set.of(TYPENAME_STRING));
         TestUtil.useV2(nb);
         NodeState before = builder.getNodeState();
         builder.setProperty("foo", "fox jumping");
@@ -644,7 +642,7 @@ public class LuceneIndexTest {
         //Also initialize the NodeType registry required for Lucene index to work
         builder.setChildNode(JCR_SYSTEM, INITIAL_CONTENT.getChildNode(JCR_SYSTEM));
         NodeBuilder index = builder.child(INDEX_DEFINITIONS_NAME);
-        NodeBuilder idxb = newLucenePropertyIndexDefinition(index, "lucene", ImmutableSet.of("foo", "foo2"), null);
+        NodeBuilder idxb = newLucenePropertyIndexDefinition(index, "lucene", Set.of("foo", "foo2"), null);
         idxb.setProperty(PERSISTENCE_NAME, PERSISTENCE_FILE);
         idxb.setProperty(PERSISTENCE_PATH, getIndexDir());
 
@@ -667,7 +665,7 @@ public class LuceneIndexTest {
     @Test
     public void luceneWithCopyOnReadDir() throws Exception{
         NodeBuilder index = builder.child(INDEX_DEFINITIONS_NAME);
-        newLucenePropertyIndexDefinition(index, "lucene", ImmutableSet.of("foo", "foo2"), null);
+        newLucenePropertyIndexDefinition(index, "lucene", Set.of("foo", "foo2"), null);
 
         NodeState before = builder.getNodeState();
         builder.setProperty("foo", "bar");
@@ -693,7 +691,7 @@ public class LuceneIndexTest {
     public void luceneWithCopyOnReadDirAndReindex() throws Exception{
         NodeBuilder index = builder.child(INDEX_DEFINITIONS_NAME);
         NodeBuilder defnState =
-            newLucenePropertyIndexDefinition(index, "lucene", ImmutableSet.of("foo", "foo2", "foo3"), null);
+            newLucenePropertyIndexDefinition(index, "lucene", Set.of("foo", "foo2", "foo3"), null);
         IndexDefinition definition = new IndexDefinition(root, defnState.getNodeState(), "/foo");
 
         //1. Create index in two increments
@@ -775,14 +773,14 @@ public class LuceneIndexTest {
         //The way LuceneIndexLookupUtil works is. It collect child first and then
         //parent
         NodeBuilder index = builder.child(INDEX_DEFINITIONS_NAME);
-        NodeBuilder nb = newLuceneIndexDefinitionV2(index, "lucene", of(TYPENAME_STRING));
+        NodeBuilder nb = newLuceneIndexDefinitionV2(index, "lucene", Set.of(TYPENAME_STRING));
         nb.setProperty(FulltextIndexConstants.FULL_TEXT_ENABLED, false);
-        nb.setProperty(createProperty(INCLUDE_PROPERTY_NAMES, of("foo"), STRINGS));
+        nb.setProperty(createProperty(INCLUDE_PROPERTY_NAMES, Set.of("foo"), STRINGS));
 
         index = builder.child("test").child(INDEX_DEFINITIONS_NAME);
-        NodeBuilder nb2 = newLuceneIndexDefinitionV2(index, "lucene", of(TYPENAME_STRING));
+        NodeBuilder nb2 = newLuceneIndexDefinitionV2(index, "lucene", Set.of(TYPENAME_STRING));
         nb2.setProperty(FulltextIndexConstants.FULL_TEXT_ENABLED, false);
-        nb2.setProperty(createProperty(INCLUDE_PROPERTY_NAMES, of("foo"), STRINGS));
+        nb2.setProperty(createProperty(INCLUDE_PROPERTY_NAMES, Set.of("foo"), STRINGS));
 
         NodeState before = builder.getNodeState();
         builder.child("test").setProperty("foo", "fox is jumping");
@@ -818,7 +816,7 @@ public class LuceneIndexTest {
     @Test
     public void indexNameIsIndexPath() throws Exception {
         NodeBuilder index = builder.child(INDEX_DEFINITIONS_NAME);
-        newLucenePropertyIndexDefinition(index, "lucene", ImmutableSet.of("foo"), null);
+        newLucenePropertyIndexDefinition(index, "lucene", Set.of("foo"), null);
 
         NodeState before = builder.getNodeState();
         builder.setProperty("foo", "bar");
@@ -844,8 +842,8 @@ public class LuceneIndexTest {
 
         // Create 2 index def - one with config related error and one without
         NodeBuilder index = builder.child(INDEX_DEFINITIONS_NAME);
-        newLucenePropertyIndexDefinition(index, "luceneTest", ImmutableSet.of("foo"), null);
-        newLucenePropertyIndexDefinition(index, "luceneTest2", ImmutableSet.of("foo2"), null);
+        newLucenePropertyIndexDefinition(index, "luceneTest", Set.of("foo"), null);
+        newLucenePropertyIndexDefinition(index, "luceneTest2", Set.of("foo2"), null);
 
         builder.child(INDEX_DEFINITIONS_NAME).child("luceneTest").setProperty(IndexConstants.ENTRY_COUNT_PROPERTY_NAME, ImmutableList.of(2L), Type.LONGS);
 
